* Moved ANT deb task into build-bin/build-deb * Updated DEB package building * Updated shell script to be aware of the bundled runtime * Added SVG file with the new icon